=========================================================================
Date                Version     Description
=========================================================================

2024-03-18: v1.1.4 : Add VISA additional mandatory fields to the Order API Request Body.
                     Don't allow OrderCancelAfter Observer to trigger for other payment methods.
                     Don't allow Cron to process orders created by other payment methods. 
                     Change the cron table from ngenius_networkinternational to ngenius_networkinternational_sales_order to avoid the processing of historic orders.
                     Fix Cron order processing of abandoned APM methods in a state of AWAIT_3DS.
                     Improve payment action support for China Union Pay.

2023-11-28: v1.1.3 : Cancel abandoned orders after one hour using the cron.
                     Add the ability to debug cron job order processing.
                     Update to N-Genius Common Class 1.0.6.
                     Add support for XOF.
                     Improve support for Samsung Pay Refunds.

2023-10-31: v1.1.2 : Fix schema index attribute causing deprecated functionality warning.
                     Add support for BHD and KWD currency decimals.

2023-09-15: v1.1.1 : Align code with Magento code standards (phpcs).
                     Fix duplicate mail notifications when re-loading the order success page.
                     Fix store credit reverting twice on certain order status settings.

2023-08-15: v1.1.0 : Fix order status not changing to 'Complete' when shipped using 'Capture Offline'.
                     Fix cron query timing out.
                     Allow N-Genius Refund Statuses to be configurable.
                     Add merchant defined data for plugin name and version.

2023-08-05: v1.0.9 : Add option "Send Email on Order Creation".
                     Force Magento payment action to 'authorize'.