@@ -160,7 +160,7 @@ class PaymentRequest implements BuilderInterface
                 ],
                 'merchantDefinedData'    => [
                     'pluginName'    => 'magento-2',
-                    'pluginVersion' => '1.1.4'
+                    'pluginVersion' => '1.1.5'
                 ]
             ],
             'method' => \Laminas\Http\Request::METHOD_POST,
