@@ -2,7 +2,7 @@
   "name": "networkinternational/ngenius",
   "description": "Network International N-Genius Payment Gateway for Magento 2",
   "type": "magento2-module",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "minimum-stability": "stable",
   "license": "GPL-3.0",
   "authors": [
@@ -13,7 +13,7 @@
   ],
   "require": {
     "php": "^8.1",
-    "ngenius/ngenius-common": "v1.0.8"
+    "ngenius/ngenius-common": "v1.0.9"
   },
   "autoload": {
     "files": [
